fixed css shit, realigned divimg class

--- a/againandagain/again.css
+++ b/againandagain/again.css
@@ -29,6 +29,7 @@ nav {
 
 nav .divimg {
 	display: inline-block;
+    vertical-align: middle;
 	width: 18px;
 	height: 18px;
 	padding: 0 !important;
