--- a/default.css
+++ b/default.css
@@ -35,6 +35,7 @@ nav {
 
 nav .divimg {
 	display: inline-block;
+    vertical-align: middle;
 	width: 18px;
 	height: 18px;
 	padding: 0 !important;
